--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -8,6 +8,7 @@
     <title>{% block title %}{% endblock %}</title>
 
     {% block css %}{% endblock %}
+    {% block script %}{% endblock %}
 </head>
 <body>
 {% block content %}{% endblock %}
