--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <link href="{% static 'AmazeUI-2.4.2/assets/css/admin.css' %}" rel="stylesheet" type="text/css"/>
     <link href="{% static 'basic/css/demo.css' %}" rel="stylesheet" type="text/css"/>
     <link href="{% static 'css/hmstyle.css' %}" rel="stylesheet" type="text/css"/>
+    		<script type="text/javascript " src="{% static 'basic/js/quick_links.js' %} "></script>
     <script type="text/javascript" src="{% static 'AmazeUI-2.4.2/assets/js/jquery.min.js' %}../"></script>
     <script type="text/javascript" src="{% static 'AmazeUI-2.4.2/assets/js/amazeui.min.js' %}"></script>
 {% endblock %}
@@ -516,5 +517,5 @@
 		<script>
 			window.jQuery || document.write('<script src="basic/js/jquery.min.js "><\/script>');
 		</script>
-		<script type="text/javascript " src="../basic/js/quick_links.js "></script>
+
 {% endblock %}
