--- a/templates/home/home3.html
+++ b/templates/home/home3.html
@@ -696,7 +696,7 @@
 							    
 						<div class="mod-vip">
 							<div class="m-baseinfo">
-								<a href="../person/index.html">
+								<a href="../personal/index.html">
 									<img src="../images/getAvatar.do.jpg">
 								</a>
 								<em>
@@ -1239,7 +1239,7 @@
 			<li class="active"><a href="home3.html"><i class="am-icon-home "></i>首页</a></li>
 			<li><a href="sort.html"><i class="am-icon-list"></i>分类</a></li>
 			<li><a href="shopcart.html"><i class="am-icon-shopping-basket"></i>购物车</a></li>	
-			<li><a href="../person/index.html"><i class="am-icon-user"></i>我的</a></li>					
+			<li><a href="../personal/index.html"><i class="am-icon-user"></i>我的</a></li>
 		</div>
 		<!--菜单 -->
 		<div class=tip>
