个人中心页面模板化

--- a/templates/personal/billlist.html
+++ b/templates/personal/billlist.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html>
+{% extends 'base/base.html' %}
+{% load staticfiles %}
+{% block title %}
 
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=0">
+{% endblock %}
+{% block css %}
 
+{% endblock %}
+{% block script %}
+
+{% endblock %}
+{% block content %}
+
+{% endblock %}
 		<title>账单明细</title>
 
 		<link href="../AmazeUI-2.4.2/assets/css/admin.css" rel="stylesheet" type="text/css">
