--- a/templates/personal/points.html
+++ b/templates/personal/points.html
@@ -1,21 +1,20 @@
-<!DOCTYPE html>
-<html>
-
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=0">
-
+{% extends 'base/base.html' %}
+{% load staticfiles %}
+{% block title %}
 		<title>积分明细</title>
+{% endblock %}
+{% block css %}
+		<link href="{% static 'AmazeUI-2.4.2/assets/css/admin.css' %}" rel="stylesheet" type="text/css">
+		<link href="{% static 'AmazeUI-2.4.2/assets/css/amazeui.css' %}" rel="stylesheet" type="text/css">
+		<link href="{% static 'css/personal.css' %}" rel="stylesheet" type="text/css">
+		<link href="{% static 'css/point.css' %}" rel="stylesheet" type="text/css">
+{% endblock %}
+{% block script %}
+		<script src="{% static 'AmazeUI-2.4.2/assets/js/jquery.min.js' %}"></script>
+		<script src="{% static 'AmazeUI-2.4.2/assets/js/amazeui.js' %}"></script>
+{% endblock %}
+{% block content %}
 
-		<link href="../AmazeUI-2.4.2/assets/css/admin.css" rel="stylesheet" type="text/css">
-		<link href="../AmazeUI-2.4.2/assets/css/amazeui.css" rel="stylesheet" type="text/css">
-		<link href="../css/personal.css" rel="stylesheet" type="text/css">
-		<link href="../css/point.css" rel="stylesheet" type="text/css">
-		<script src="../AmazeUI-2.4.2/assets/js/jquery.min.js"></script>
-		<script src="../AmazeUI-2.4.2/assets/js/amazeui.js"></script>
-	</head>
-
-	<body>
 		<!--头 -->
 		<header>
 			<article>
@@ -110,12 +109,12 @@
 									<table>
 										<b></b>
 										<thead>
-											<tr>												
+											<tr>
 												<th class="th1">积分详情</th>
 												<th class="th2">积分变动</th>
 												<th class="th3">日期</th>
 											</tr>
-										</thead>										
+										</thead>
 										<tbody>
 											<tr>
 												<td class="pointType">积分兑换</td>
@@ -154,7 +153,7 @@
 									<table>
 										<b></b>
 										<thead>
-											<tr>												
+											<tr>
 												<th class="th1">积分详情</th>
 												<th class="th2">获取积分</th>
 												<th class="th3">日期</th>
@@ -193,7 +192,7 @@
 									<table>
 										<b></b>
 										<thead>
-											<tr>												
+											<tr>
 												<th class="th1">积分详情</th>
 												<th class="th2">消耗积分</th>
 												<th class="th3">日期</th>
@@ -282,7 +281,7 @@
 						<ul>
 							<li> <a href="consultation.html">商品咨询</a></li>
 							<li> <a href="suggest.html">意见反馈</a></li>
-							
+
 							<li> <a href="news.html">我的消息</a></li>
 						</ul>
 					</li>
@@ -290,7 +289,5 @@
 
 			</aside>
 		</div>
+{% endblock %}
 
-	</body>
-
-</html>
