--- a/templates/order/order.html
+++ b/templates/order/order.html
@@ -17,8 +17,8 @@
 			<ul class="message-l">
 				<div class="topMessage">
 					<div class="menu-hd">
-						<a href="#" target="_top" class="h">亲，请登录</a>
-						<a href="#" target="_top">免费注册</a>
+						<a href="{% url 'login' %}" target="_top" class="h">亲，请登录</a>
+						<a href="{% url 'register' %}" target="_top">免费注册</a>
 					</div>
 				</div>
 			</ul>
@@ -357,7 +357,7 @@
 
 									<div id="holyshit269" class="submitOrder">
 										<div class="go-btn-wrap">
-											<a id="J_Go" href="success.html" class="btn-go" tabindex="0" title="点击此按钮，提交订单">提交订单</a>
+											<a id="J_Go" href="{% url 'pay' %}" class="btn-go" tabindex="0" title="点击此按钮，提交订单">提交订单</a>
 										</div>
 									</div>
 									<div class="clear"></div>
