--- a/templates/personal/bill.html
+++ b/templates/personal/bill.html
@@ -1,24 +1,21 @@
-<!DOCTYPE html>
-<html>
+{% extends 'base/base.html' %}
+{% load staticfiles %}
+{% block title %}
+    <title>个人账单</title>
+{% endblock %}
+{% block css %}
+		<link href="{% static 'AmazeUI-2.4.2/assets/css/admin.css' %}" rel="stylesheet" type="text/css">
+		<link href="{% static 'AmazeUI-2.4.2/assets/css/amazeui.css' %}" rel="stylesheet" type="text/css">
 
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=0">
-
-		<title>个人账单</title>
-
-		<link href="../AmazeUI-2.4.2/assets/css/admin.css" rel="stylesheet" type="text/css">
-		<link href="../AmazeUI-2.4.2/assets/css/amazeui.css" rel="stylesheet" type="text/css">
-
-		<link href="../css/personal.css" rel="stylesheet" type="text/css">
-		<link href="../css/blstyle.css" rel="stylesheet" type="text/css">
-		<script src="../AmazeUI-2.4.2/assets/js/jquery.min.js"></script>
-		<script src="../../one/AmazeUI-2.4.2/assets/js/amazeui.js"></script>
-	</head>
-
-	<body>
-		<!--头 -->
-		<header>
+		<link href="{% static 'css/personal.css' %}" rel="stylesheet" type="text/css">
+		<link href="{% static 'css/blstyle.css' %}" rel="stylesheet" type="text/css">
+{% endblock %}
+{% block script %}
+		<script src="{% static 'AmazeUI-2.4.2/assets/js/jquery.min.js' %}"></script>
+		<script src="{% static 'AmazeUI-2.4.2/assets/js/amazeui.js' %}"></script>
+{% endblock %}
+{% block content %}
+    		<header>
 			<article>
 				<div class="mt-logo">
 					<!--顶部导航条 -->
@@ -210,7 +207,7 @@
 
 									<!--收入-->
 									<h3 class="expense income-title block-title">
-                                                                                                                       收入                                                              
+                                                                                                                       收入
                                       <span class="num ng-binding">
                                               0.00
                                        </span>
@@ -429,24 +426,24 @@
 														</div>
 													</div>
 												</div>
-											</li>											
+											</li>
 										</ul>
 									</div>
 								</div>
 
 								<script>
 									$(document).ready(function (ev) {
-								
+
 									    $('.cards-carousel .details').on('click', function (ev) {
 								             $('.cards-details').css("display","block");
-								             $('.cards-carousel').css("display","none");								 
-									    });									   									    
-								
+								             $('.cards-carousel').css("display","none");
+									    });
+
 									    $('.cards-details .close,.am-next,.am-prev,.am-control-nav li a').on('click', function (ev) {
 								             $('.cards-details').css("display","none");
-								             $('.cards-carousel').css("display","block");								 
-									    });									    
-									    									   								    
+								             $('.cards-carousel').css("display","block");
+									    });
+
 									});
 								</script>
 
@@ -456,87 +453,10 @@
 
 					</div>
 				</div>
-				<!--底部-->
-				<div class="footer">
-					<div class="footer-hd">
-						<p>
-							<a href="#">恒望科技</a>
-							<b>|</b>
-							<a href="#">商城首页</a>
-							<b>|</b>
-							<a href="#">支付宝</a>
-							<b>|</b>
-							<a href="#">物流</a>
-						</p>
-					</div>
-					<div class="footer-bd">
-						<p>
-							<a href="#">关于恒望</a>
-							<a href="#">合作伙伴</a>
-							<a href="#">联系我们</a>
-							<a href="#">网站地图</a>
-							<em>© 2015-2025 Hengwang.com 版权所有. 更多模板 <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></em>
-						</p>
-					</div>
+				{% include 'personal/person_base/person_footer.html' %}
 				</div>
-
+                {% include 'personal/person_base/person_aside.html' %}
 			</div>
 
-			<aside class="menu">
-				<ul>
-					<li class="person active">
-						<a href="index.html"><i class="am-icon-user"></i>个人中心</a>
-					</li>
-					<li class="person">
-						<p><i class="am-icon-newspaper-o"></i>个人资料</p>
-						<ul>
-							<li> <a href="information.html">个人信息</a></li>
-							<li> <a href="safety.html">安全设置</a></li>
-							<li> <a href="address.html">地址管理</a></li>
-							<li> <a href="cardlist.html">快捷支付</a></li>
-						</ul>
-					</li>
-					<li class="person">
-						<p><i class="am-icon-balance-scale"></i>我的交易</p>
-						<ul>
-							<li><a href="order.html">订单管理</a></li>
-							<li> <a href="change.html">退款售后</a></li>
-							<li> <a href="comment.html">评价商品</a></li>
-						</ul>
-					</li>
-					<li class="person">
-						<p><i class="am-icon-dollar"></i>我的资产</p>
-						<ul>
-							<li> <a href="points.html">我的积分</a></li>
-							<li> <a href="coupon.html">优惠券 </a></li>
-							<li> <a href="bonus.html">红包</a></li>
-							<li> <a href="walletlist.html">账户余额</a></li>
-							<li> <a href="bill.html">账单明细</a></li>
-						</ul>
-					</li>
-
-					<li class="person">
-						<p><i class="am-icon-tags"></i>我的收藏</p>
-						<ul>
-							<li> <a href="collection.html">收藏</a></li>
-							<li> <a href="foot.html">足迹</a></li>							
-						</ul>
-					</li>
-
-					<li class="person">
-						<p><i class="am-icon-qq"></i>在线客服</p>
-						<ul>
-							<li> <a href="consultation.html">商品咨询</a></li>
-							<li> <a href="suggest.html">意见反馈</a></li>
-							
-							<li> <a href="news.html">我的消息</a></li>
-						</ul>
-					</li>
-				</ul>
-
-			</aside>
 		</div>
-
-	</body>
-
-</html>
+{% endblock %}
