--- a/templates/personal/comment.html
+++ b/templates/personal/comment.html
@@ -1,3 +1,17 @@
+{% extends 'base/base.html' %}
+{% load staticfiles %}
+{% block title %}
+
+{% endblock %}
+{% block css %}
+
+{% endblock %}
+{% block script %}
+
+{% endblock %}
+{% block content %}
+
+{% endblock %}
 <!DOCTYPE html>
 <html>
 
