--- a/templates/personal/record.html
+++ b/templates/personal/record.html
@@ -1,24 +1,22 @@
-<!DOCTYPE html>
-<html>
 
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=0">
-
+{% extends 'base/base.html' %}
+{% load staticfiles %}
+{% block title %}
 		<title>钱款去向</title>
+{% endblock %}
+{% block css %}
+		<link href="{% static 'AmazeUI-2.4.2/assets/css/admin.css' %}" rel="stylesheet" type="text/css">
+		<link href="{% static 'AmazeUI-2.4.2/assets/css/amazeui.css' %}" rel="stylesheet" type="text/css">
 
-		<link href="../AmazeUI-2.4.2/assets/css/admin.css" rel="stylesheet" type="text/css">
-		<link href="../AmazeUI-2.4.2/assets/css/amazeui.css" rel="stylesheet" type="text/css">
+		<link href="{% static 'css/personal.css' %}" rel="stylesheet" type="text/css">
+		<link href="{% static 'css/refstyle.css' %}" rel="stylesheet" type="text/css">
+{% endblock %}
+{% block script %}
+		<script type="text/javascript" src="{% static 'js/jquery-1.7.2.min.js' %}"></script>
+		<script src="{% static 'AmazeUI-2.4.2/assets/js/amazeui.js' %}"></script>
+{% endblock %}
+{% block content %}
 
-		<link href="../css/personal.css" rel="stylesheet" type="text/css">
-		<link href="../css/refstyle.css" rel="stylesheet" type="text/css">
-
-		<script type="text/javascript" src="../js/jquery-1.7.2.min.js"></script>
-		<script src="../AmazeUI-2.4.2/assets/js/amazeui.js"></script>
-
-	</head>
-
-	<body>
 		<!--头 -->
 		<header>
 			<article>
@@ -234,8 +232,8 @@
 						<p><i class="am-icon-qq"></i>在线客服</p>
 						<ul>
 							<li> <a href="consultation.html">商品咨询</a></li>
-							<li> <a href="suggest.html">意见反馈</a></li>							
-							
+							<li> <a href="suggest.html">意见反馈</a></li>
+
 							<li> <a href="news.html">我的消息</a></li>
 						</ul>
 					</li>
@@ -243,7 +241,4 @@
 
 			</aside>
 		</div>
-
-	</body>
-
-</html>
+{% endblock %}
