--- a/templates/personal/refund.html
+++ b/templates/personal/refund.html
@@ -1,24 +1,20 @@
-<!DOCTYPE html>
-<html>
-
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=0">
-
+{% extends 'base/base.html' %}
+{% load staticfiles %}
+{% block title %}
 		<title>退换货</title>
+{% endblock %}
+{% block css %}
+		<link href="{% static 'AmazeUI-2.4.2/assets/css/admin.css' %}" rel="stylesheet" type="text/css">
+		<link href="{% static 'AmazeUI-2.4.2/assets/css/amazeui.css' %}" rel="stylesheet" type="text/css">
 
-		<link href="../AmazeUI-2.4.2/assets/css/admin.css" rel="stylesheet" type="text/css">
-		<link href="../AmazeUI-2.4.2/assets/css/amazeui.css" rel="stylesheet" type="text/css">
-
-		<link href="../css/personal.css" rel="stylesheet" type="text/css">
-		<link href="../css/refstyle.css" rel="stylesheet" type="text/css">
-
-		<script src="../AmazeUI-2.4.2/assets/js/jquery.min.js" type="text/javascript"></script>
-		<script src="../AmazeUI-2.4.2/assets/js/amazeui.js" type="text/javascript"></script>
-
-	</head>
-
-	<body>
+		<link href="{% static 'css/personal.css' %}" rel="stylesheet" type="text/css">
+		<link href="{% static 'css/refstyle.css' %}" rel="stylesheet" type="text/css">
+{% endblock %}
+{% block script %}
+		<script src="{% static 'AmazeUI-2.4.2/assets/js/jquery.min.js' %}" type="text/javascript"></script>
+		<script src="{% static 'AmazeUI-2.4.2/assets/js/amazeui.js' %}" type="text/javascript"></script>
+{% endblock %}
+{% block content %}
 		<!--头 -->
 		<header>
 			<article>
@@ -112,15 +108,15 @@
                                 <em class="u-progress-stage-bg"></em>
                                 <i class="u-stage-icon-inner">3<em class="bg"></em></i>
                                 <p class="stage-name">款项成功退回</p>
-                            </span>                            
+                            </span>
 							<span class="u-progress-placeholder"></span>
 						</div>
 						<div class="u-progress-bar total-steps-2">
 							<div class="u-progress-bar-inner"></div>
 						</div>
 					</div>
-					
-					
+
+
 						<div class="refund-aside">
 							<div class="item-pic">
 								<a href="#" class="J_MakePoint">
@@ -176,7 +172,7 @@
 										</select>
 									</div>
 								</div>
-								
+
 								<div class="am-form-group">
 									<label for="refund-reason" class="am-form-label">退款原因</label>
 									<div class="am-form-content">
@@ -184,7 +180,7 @@
 											<option value="a" selected>请选择退款原因</option>
 											<option value="b">不想要了</option>
 											<option value="c">买错了</option>
-											<option value="d">没收到货</option>											
+											<option value="d">没收到货</option>
 											<option value="e">与说明不符</option>
 										</select>
 									</div>
@@ -278,7 +274,7 @@
 						<p><i class="am-icon-tags"></i>我的收藏</p>
 						<ul>
 							<li> <a href="collection.html">收藏</a></li>
-							<li> <a href="foot.html">足迹</a></li>	
+							<li> <a href="foot.html">足迹</a></li>
 						</ul>
 					</li>
 
@@ -286,8 +282,8 @@
 						<p><i class="am-icon-qq"></i>在线客服</p>
 						<ul>
 							<li> <a href="consultation.html">商品咨询</a></li>
-							<li> <a href="suggest.html">意见反馈</a></li>							
-							
+							<li> <a href="suggest.html">意见反馈</a></li>
+
 							<li> <a href="news.html">我的消息</a></li>
 						</ul>
 					</li>
@@ -296,6 +292,4 @@
 			</aside>
 		</div>
 
-	</body>
-
-</html>
+{% endblock %}
