--- a/templates/personal/suggest.html
+++ b/templates/personal/suggest.html
@@ -1,23 +1,19 @@
-<!DOCTYPE html>
-<html>
-
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=0">
-
+{% extends 'base/base.html' %}
+{% load staticfiles %}
+{% block title %}
 		<title>意见反馈</title>
+{% endblock %}
+{% block css %}
+		<link href="{% static 'AmazeUI-2.4.2/assets/css/admin.css' %}" rel="stylesheet" type="text/css">
+		<link href="{% static 'AmazeUI-2.4.2/assets/css/amazeui.css' %}" rel="stylesheet" type="text/css">
 
-		<link href="../AmazeUI-2.4.2/assets/css/admin.css" rel="stylesheet" type="text/css">
-		<link href="../AmazeUI-2.4.2/assets/css/amazeui.css" rel="stylesheet" type="text/css">
-
-		<link href="../css/personal.css" rel="stylesheet" type="text/css">
-
-		<script src="../AmazeUI-2.4.2/assets/js/jquery.min.js" type="text/javascript"></script>
-		<script src="../AmazeUI-2.4.2/assets/js/amazeui.js" type="text/javascript"></script>
-
-	</head>
-
-	<body>
+		<link href="{% static 'css/personal.css' %}" rel="stylesheet" type="text/css">
+{% endblock %}
+{% block script %}
+		<script src="{% static 'AmazeUI-2.4.2/assets/js/jquery.min.js' %}" type="text/javascript"></script>
+		<script src="{% static 'AmazeUI-2.4.2/assets/js/amazeui.js' %}" type="text/javascript"></script>
+{% endblock %}
+{% block content %}
 		<!--头 -->
 		<header>
 			<article>
@@ -190,7 +186,7 @@
 						<ul>
 							<li> <a href="consultation.html">商品咨询</a></li>
 							<li> <a href="suggest.html">意见反馈</a></li>
-							
+
 							<li> <a href="news.html">我的消息</a></li>
 						</ul>
 					</li>
@@ -198,7 +194,6 @@
 
 			</aside>
 		</div>
+{% endblock %}
 
-	</body>
 
-</html>
