--- a/templates/personal/wallet.html
+++ b/templates/personal/wallet.html
@@ -1,23 +1,19 @@
-<!DOCTYPE html>
-<html>
+{% extends 'base/base.html' %}
+{% load staticfiles %}
+{% block title %}
+<title>账户余额</title>
+{% endblock %}
+{% block css %}
+		<link href="{% static 'AmazeUI-2.4.2/assets/css/admin.css' %}" rel="stylesheet" type="text/css">
+		<link href="{% static 'AmazeUI-2.4.2/assets/css/amazeui.css' %}" rel="stylesheet" type="text/css">
 
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=0">
-
-		<title>账户余额</title>
-
-		<link href="../AmazeUI-2.4.2/assets/css/admin.css" rel="stylesheet" type="text/css">
-		<link href="../AmazeUI-2.4.2/assets/css/amazeui.css" rel="stylesheet" type="text/css">
-
-		<link href="../css/personal.css" rel="stylesheet" type="text/css">
-
-		<script src="../AmazeUI-2.4.2/assets/js/jquery.min.js"  type="text/javascript"></script>
-		<script src="../AmazeUI-2.4.2/assets/js/amazeui.js"  type="text/javascript"></script>	
-		
-	</head>
-
-	<body>
+		<link href="{% static 'css/personal.css' %}" rel="stylesheet" type="text/css">
+{% endblock %}
+{% block script %}
+		<script src="{% static 'AmazeUI-2.4.2/assets/js/jquery.min.js' %}"  type="text/javascript"></script>
+		<script src="{% static 'AmazeUI-2.4.2/assets/js/amazeui.js' %}"  type="text/javascript"></script>
+{% endblock %}
+{% block content %}
 		<!--头 -->
 		<header>
 			<article>
@@ -94,7 +90,7 @@
 						<div class="am-cf am-padding">
 							<div class="am-fl am-cf"><strong class="am-text-danger am-text-lg">账户余额</strong> / <small>Account&nbsp;Balance</small></div>
 						</div>
-						<hr/>	
+						<hr/>
 						<div class="finance">
 							<div class="financeText">
 								<p>可用余额:<span>¥0.0</span></p>
@@ -174,8 +170,8 @@
 						<p><i class="am-icon-qq"></i>在线客服</p>
 						<ul>
 							<li> <a href="consultation.html">商品咨询</a></li>
-							<li> <a href="suggest.html">意见反馈</a></li>							
-							
+							<li> <a href="suggest.html">意见反馈</a></li>
+
 							<li> <a href="news.html">我的消息</a></li>
 						</ul>
 					</li>
@@ -183,7 +179,8 @@
 
 			</aside>
 		</div>
+{% endblock %}
 
-	</body>
 
-</html>
+
+
