--- a/templates/personal/walletlist.html
+++ b/templates/personal/walletlist.html
@@ -1,74 +1,21 @@
-<!DOCTYPE html>
-<html>
+{% extends 'base/base.html' %}
+{% load staticfiles %}
+{% block title %}
+<title>账户明细</title>
+{% endblock %}
+{% block css %}
+		<link href="{% static 'AmazeUI-2.4.2/assets/css/admin.css' %}" rel="stylesheet" type="text/css">
+		<link href="{% static 'AmazeUI-2.4.2/assets/css/amazeui.css' %}" rel="stylesheet" type="text/css">
 
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=0">
-
-		<title>账户明细</title>
-
-		<link href="../AmazeUI-2.4.2/assets/css/admin.css" rel="stylesheet" type="text/css">
-		<link href="../AmazeUI-2.4.2/assets/css/amazeui.css" rel="stylesheet" type="text/css">
-
-		<link href="../css/personal.css" rel="stylesheet" type="text/css">
-		<link href="../css/wallet.css" rel="stylesheet" type="text/css">
-
-		<script src="../AmazeUI-2.4.2/assets/js/jquery.min.js" type="text/javascript"></script>
-		<script src="../AmazeUI-2.4.2/assets/js/amazeui.js" type="text/javascript"></script>
-
-	</head>
-
-	<body>
-		<!--头 -->
-		<header>
-			<article>
-				<div class="mt-logo">
-					<!--顶部导航条 -->
-					<div class="am-container header">
-						<ul class="message-l">
-							<div class="topMessage">
-								<div class="menu-hd">
-									<a href="#" target="_top" class="h">亲，请登录</a>
-									<a href="#" target="_top">免费注册</a>
-								</div>
-							</div>
-						</ul>
-						<ul class="message-r">
-							<div class="topMessage home">
-								<div class="menu-hd"><a href="#" target="_top" class="h">商城首页</a></div>
-							</div>
-							<div class="topMessage my-shangcheng">
-								<div class="menu-hd MyShangcheng"><a href="#" target="_top"><i class="am-icon-user am-icon-fw"></i>个人中心</a></div>
-							</div>
-							<div class="topMessage mini-cart">
-								<div class="menu-hd"><a id="mc-menu-hd" href="#" target="_top"><i class="am-icon-shopping-cart  am-icon-fw"></i><span>购物车</span><strong id="J_MiniCartNum" class="h">0</strong></a></div>
-							</div>
-							<div class="topMessage favorite">
-								<div class="menu-hd"><a href="#" target="_top"><i class="am-icon-heart am-icon-fw"></i><span>收藏夹</span></a></div>
-						</ul>
-						</div>
-
-						<!--悬浮搜索框-->
-
-						<div class="nav white">
-							<div class="logoBig">
-								<li><img src="../images/logobig.png" /></li>
-							</div>
-
-							<div class="search-bar pr">
-								<a name="index_none_header_sysc" href="#"></a>
-								<form>
-									<input id="searchInput" name="index_none_header_sysc" type="text" placeholder="搜索" autocomplete="off">
-									<input id="ai-topsearch" class="submit am-btn" value="搜索" index="1" type="submit">
-								</form>
-							</div>
-						</div>
-
-						<div class="clear"></div>
-					</div>
-				</div>
-			</article>
-		</header>
+		<link href="{% static 'css/personal.css' %}" rel="stylesheet" type="text/css">
+		<link href="{% static 'css/wallet.css' %}" rel="stylesheet" type="text/css">
+{% endblock %}
+{% block script %}
+		<script src="{% static 'AmazeUI-2.4.2/assets/js/jquery.min.js' %}" type="text/javascript"></script>
+		<script src="{% static 'AmazeUI-2.4.2/assets/js/amazeui.js' %}" type="text/javascript"></script>
+{% endblock %}
+{% block content %}
+        {% include 'personal/person_base/person_header.html' %}
 		<div class="nav-table">
 			<div class="long-title"><span class="all-goods">全部分类</span></div>
 			<div class="nav-cont">
@@ -292,7 +239,7 @@
 								</div>
 							</li>
 						</div>
-						
+
 						<!--分页-->
 						<ul class="am-pagination am-pagination-right">
 							<li class="am-disabled"><a href="#">&laquo;</a></li>
@@ -375,7 +322,7 @@
 						<ul>
 							<li> <a href="consultation.html">商品咨询</a></li>
 							<li> <a href="suggest.html">意见反馈</a></li>
-							
+
 							<li> <a href="news.html">我的消息</a></li>
 						</ul>
 					</li>
@@ -383,7 +330,9 @@
 
 			</aside>
 		</div>
+{% endblock %}
 
-	</body>
 
-</html>
+
+
+
