--- a/templates/include/head.html
+++ b/templates/include/head.html
@@ -25,7 +25,7 @@
                 <div class="menu-hd"><a href="{% url 'index' %}" target="_top" class="h">商城首页</a></div>
             </div>
             <div class="topMessage my-shangcheng">
-                <div class="menu-hd MyShangcheng"><a href="#" target="_top"><i class="am-icon-user am-icon-fw"></i>个人中心</a></div>
+                <div class="menu-hd MyShangcheng"><a href="{% url 'personal' %}" target="_top"><i class="am-icon-user am-icon-fw"></i>个人中心</a></div>
             </div>
             <div class="topMessage mini-cart">
             {%  if request.session.is_login %}
