--- a/templates/personal/index.html
+++ b/templates/personal/index.html
@@ -1,101 +1,22 @@
 {% extends 'base/base.html' %}
 {% load staticfiles %}
 {% block title %}
-
+		<title>个人中心</title>
 {% endblock %}
 {% block css %}
-
+		<link href="{% static 'AmazeUI-2.4.2/assets/css/admin.css' %}" rel="stylesheet" type="text/css">
+		<link href="{% static 'AmazeUI-2.4.2/assets/css/amazeui.css' %}" rel="stylesheet" type="text/css">
+		<link href="{% static 'css/personal.css' %}" rel="stylesheet" type="text/css">
+		<link href="{% static 'css/vipstyle.css' %}" rel="stylesheet" type="text/css">
 {% endblock %}
 {% block script %}
-
+		<script src="{% static 'AmazeUI-2.4.2/assets/js/jquery.min.js' %}"></script>
+		<script src="{% static 'AmazeUI-2.4.2/assets/js/amazeui.js' %}"></script>
 {% endblock %}
 {% block content %}
-
-{% endblock %}
-<!DOCTYPE html>
-<html>
-
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=0">
-
-		<title>个人中心</title>
-
-		<link href="../AmazeUI-2.4.2/assets/css/admin.css" rel="stylesheet" type="text/css">
-		<link href="../AmazeUI-2.4.2/assets/css/amazeui.css" rel="stylesheet" type="text/css">
-		<link href="../css/personal.css" rel="stylesheet" type="text/css">
-		<link href="../css/vipstyle.css" rel="stylesheet" type="text/css">
-		<script src="../AmazeUI-2.4.2/assets/js/jquery.min.js"></script>
-		<script src="../AmazeUI-2.4.2/assets/js/amazeui.js"></script>
-	</head>
-
-	<body>
 		<!--头 -->
-		<header>
-			<article>
-				<div class="mt-logo">
-					<!--顶部导航条 -->
-					<div class="am-container header">
-						<ul class="message-l">
-							<div class="topMessage">
-								<div class="menu-hd">
-									<a href="#" target="_top" class="h">亲，请登录</a>
-									<a href="#" target="_top">免费注册</a>
-								</div>
-							</div>
-						</ul>
-						<ul class="message-r">
-							<div class="topMessage home">
-								<div class="menu-hd"><a href="#" target="_top" class="h">商城首页</a></div>
-							</div>
-							<div class="topMessage my-shangcheng">
-								<div class="menu-hd MyShangcheng"><a href="#" target="_top"><i class="am-icon-user am-icon-fw"></i>个人中心</a></div>
-							</div>
-							<div class="topMessage mini-cart">
-								<div class="menu-hd"><a id="mc-menu-hd" href="#" target="_top"><i class="am-icon-shopping-cart  am-icon-fw"></i><span>购物车</span><strong id="J_MiniCartNum" class="h">0</strong></a></div>
-							</div>
-							<div class="topMessage favorite">
-								<div class="menu-hd"><a href="#" target="_top"><i class="am-icon-heart am-icon-fw"></i><span>收藏夹</span></a></div>
-						</ul>
-						</div>
-
-						<!--悬浮搜索框-->
-
-						<div class="nav white">
-							<div class="logoBig">
-								<li><img src="../images/logobig.png" /></li>
-							</div>
-
-							<div class="search-bar pr">
-								<a name="index_none_header_sysc" href="#"></a>
-								<form>
-									<input id="searchInput" name="index_none_header_sysc" type="text" placeholder="搜索" autocomplete="off">
-									<input id="ai-topsearch" class="submit am-btn" value="搜索" index="1" type="submit">
-								</form>
-							</div>
-						</div>
-
-						<div class="clear"></div>
-					</div>
-				</div>
-			</article>
-		</header>
-		<div class="nav-table">
-			<div class="long-title"><span class="all-goods">全部分类</span></div>
-			<div class="nav-cont">
-				<ul>
-					<li class="index"><a href="#">首页</a></li>
-					<li class="qc"><a href="#">闪购</a></li>
-					<li class="qc"><a href="#">限时抢</a></li>
-					<li class="qc"><a href="#">团购</a></li>
-					<li class="qc last"><a href="#">大包装</a></li>
-				</ul>
-				<div class="nav-extra">
-					<i class="am-icon-user-secret am-icon-md nav-user"></i><b></b>我的福利
-					<i class="am-icon-angle-right" style="padding-left: 10px;"></i>
-				</div>
-			</div>
-		</div>
+        {% include 'include/head.html' %}
+        {% include 'include/nav_bar.html' %}
 		<b class="line"></b>
 		<div class="center">
 			<div class="col-main">
@@ -346,7 +267,7 @@
 									<li><a><p>春日护肤面膜不可少，你选对了吗？</p></a></li>
 									<li><a><p>纯粹时尚，摩登出游，吸睛美衣</p></a></li>
 									<li><a><p>粮油冲锋周 满128减18</p></a></li>
-									<li><a><p>春日护肤面膜不可少，你选对了吗？</p></a></li>									
+									<li><a><p>春日护肤面膜不可少，你选对了吗？</p></a></li>
 								</ul>
 							</div>
 						</div>
@@ -366,7 +287,7 @@
 								</a>
 								<a class="follow">收藏</a>
 							</div>
-						</div>						
+						</div>
 
 						<!--热卖推荐 -->
 						<div class="new-goods">
@@ -381,10 +302,10 @@
                                     <span class="one-hot-goods">￥189.60</span>
 								</a>
 							</div>
-						</div>						
+						</div>
      				</div>
      				<div class="clear"></div>
-     				
+
      				<!--收藏和足迹-->
      				 <div data-am-widget="tabs" class="am-tabs collection">
                          <ul class="am-tabs-nav am-cf">
@@ -432,7 +353,7 @@
 									</ul>
 								</div>
                             </div>
-                            <div data-tab-panel-1 class="am-tab-panel "> 
+                            <div data-tab-panel-1 class="am-tab-panel ">
                         		<div class="am-slider am-slider-default am-slider-carousel" data-am-flexslider="{itemWidth:155, slideshow: false}">
 									<ul class="am-slides">
                                        <li>
@@ -468,7 +389,7 @@
                                        	  <strong class="price">¥32.9</strong>
                                        </li>
 									</ul>
-								</div>                            	
+								</div>
                             </div>
                         </div>
                      </div>
@@ -498,67 +419,8 @@
 
 			</div>
 
-			<aside class="menu">
-				<ul>
-					<li class="person active">
-						<a href="index.html"><i class="am-icon-user"></i>个人中心</a>
-					</li>
-					<li class="person">
-						<p><i class="am-icon-newspaper-o"></i>个人资料</p>
-						<ul>
-							<li> <a href="information.html">个人信息</a></li>
-							<li> <a href="safety.html">安全设置</a></li>
-							<li> <a href="address.html">地址管理</a></li>
-							<li> <a href="cardlist.html">快捷支付</a></li>
-						</ul>
-					</li>
-					<li class="person">
-						<p><i class="am-icon-balance-scale"></i>我的交易</p>
-						<ul>
-							<li><a href="order.html">订单管理</a></li>
-							<li> <a href="change.html">退款售后</a></li>
-							<li> <a href="comment.html">评价商品</a></li>
-						</ul>
-					</li>
-					<li class="person">
-						<p><i class="am-icon-dollar"></i>我的资产</p>
-						<ul>
-							<li> <a href="points.html">我的积分</a></li>
-							<li> <a href="coupon.html">优惠券 </a></li>
-							<li> <a href="bonus.html">红包</a></li>
-							<li> <a href="walletlist.html">账户余额</a></li>
-							<li> <a href="bill.html">账单明细</a></li>
-						</ul>
-					</li>
-
-					<li class="person">
-						<p><i class="am-icon-tags"></i>我的收藏</p>
-						<ul>
-							<li> <a href="collection.html">收藏</a></li>
-							<li> <a href="foot.html">足迹</a></li>														
-						</ul>
-					</li>
-
-					<li class="person">
-						<p><i class="am-icon-qq"></i>在线客服</p>
-						<ul>
-							<li> <a href="consultation.html">商品咨询</a></li>
-							<li> <a href="suggest.html">意见反馈</a></li>							
-							
-							<li> <a href="news.html">我的消息</a></li>
-						</ul>
-					</li>
-				</ul>
-
-			</aside>
+			{% include 'include/aside.html' %}
 		</div>
-		<!--引导 -->
-		<div class="navCir">
-			<li><a href="../home/home2.html"><i class="am-icon-home "></i>首页</a></li>
-			<li><a href="../home/sort.html"><i class="am-icon-list"></i>分类</a></li>
-			<li><a href="../home/shopcart.html"><i class="am-icon-shopping-basket"></i>购物车</a></li>
-			<li class="active"><a href="index.html"><i class="am-icon-user"></i>我的</a></li>
-		</div>
-	</body>
 
-</html>
+{% endblock %}
+
