--- a/templates/personal/cardlist.html
+++ b/templates/personal/cardlist.html
@@ -139,7 +139,7 @@
 				</div>
 			</div>
 
-			{% include 'include/aside.html' %}
+			{% include 'personal/person_base/aside.html' %}
 		</div>
 
 {% endblock %}
