--- a/templates/personal/cardmethod.html
+++ b/templates/personal/cardmethod.html
@@ -112,6 +112,6 @@
 				</div>
 			</div>
 
-			{% include 'include/aside.html' %}
+			{% include 'personal/person_base/aside.html' %}
 		</div>
 {% endblock %}
