--- a/templates/personal/index.html
+++ b/templates/personal/index.html
@@ -419,7 +419,7 @@
 
 			</div>
 
-			{% include 'include/aside.html' %}
+			{% include 'personal/person_base/aside.html' %}
 		</div>
 
 {% endblock %}
