--- a/templates/personal/record.html
+++ b/templates/personal/record.html
@@ -124,6 +124,6 @@
 				</div>
 			</div>
 
-        {% include 'include/aside.html' %}
+        {% include 'personal/person_base/aside.html' %}
 		</div>
 {% endblock %}
