--- a/templates/personal/walletlist.html
+++ b/templates/personal/walletlist.html
@@ -245,7 +245,7 @@
             {% include 'include/footer.html' %}
         </div>
 
-        {% include 'include/aside.html' %}
+        {% include 'personal/person_base/aside.html' %}
     </div>
 {% endblock %}
 
