--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -37,7 +37,7 @@
                         {% csrf_token %}
                         <div class="user-name">
                             <label for="user"><i class="am-icon-user"></i></label>
-                            <input type="text" name="user-name" id="user" placeholder="邮箱/手机/用户名">
+                            <input type="text" name="nickname" id="user" placeholder="邮箱/手机/用户名">
                         </div>
                         <div class="user-pass">
                             <label for="password"><i class="am-icon-lock"></i></label>
