--- a/templates/include/head.html
+++ b/templates/include/head.html
@@ -41,7 +41,9 @@
     </div>
         <!--悬浮搜索框-->
     <div class="nav white">
-        <div class="logo"><img src="{% static 'images/logo.png' %}" /></div>
+        <div class="logo">
+{#            <img src="{% static 'images/logo.png' %}" />#}
+        </div>
         <div class="logoBig">
             <li><img src="{% static 'images/logobig.png' %}" /></li>
         </div>
