--- a/templates/personal/address.html
+++ b/templates/personal/address.html
@@ -188,7 +188,7 @@
             </div>
             {% include 'include/footer.html' %}
         </div>
-        {% include 'include/aside.html' %}
+        {% include 'personal/person_base/aside.html' %}
     </div>
 {% endblock %}
 
