--- a/templates/personal/change.html
+++ b/templates/personal/change.html
@@ -237,7 +237,7 @@
 				</div>
 			</div>
 
-			{% include 'include/aside.html' %}
+			{% include 'personal/person_base/aside.html' %}
 		</div>
 
 {% endblock %}
