--- a/templates/personal/collection.html
+++ b/templates/personal/collection.html
@@ -283,7 +283,7 @@
             </div>
         </div>
 
-			{% include 'include/aside.html' %}
+			{% include 'personal/person_base/aside.html' %}
     </div>
 
 {% endblock %}
