--- a/templates/personal/comment.html
+++ b/templates/personal/comment.html
@@ -173,7 +173,7 @@
 				</div>
 			</div>
 
-			{% include 'include/aside.html' %}
+			{% include 'personal/person_base/aside.html' %}
 		</div>
 
 {% endblock %}
