--- a/templates/personal/commentlist.html
+++ b/templates/personal/commentlist.html
@@ -196,7 +196,7 @@
 				</div>
 			</div>
 
-			{% include 'include/aside.html' %}
+			{% include 'personal/person_base/aside.html' %}
 		</div>
 
 {% endblock %}
