--- a/templates/personal/consultation.html
+++ b/templates/personal/consultation.html
@@ -79,7 +79,7 @@
 				</div>
 			</div>
 
-			{% include 'include/aside.html' %}
+			{% include 'personal/person_base/aside.html' %}
 		</div>
 
 {% endblock %}
