--- a/templates/personal/coupon.html
+++ b/templates/personal/coupon.html
@@ -229,6 +229,6 @@
 				</div>
 			</div>
 
-			{% include 'include/aside.html' %}
+			{% include 'personal/person_base/aside.html' %}
 		</div>
 {% endblock %}
