--- a/templates/personal/email.html
+++ b/templates/personal/email.html
@@ -98,7 +98,7 @@
             </div>
         </div>
 
-			{% include 'include/aside.html' %}
+			{% include 'personal/person_base/aside.html' %}
     </div>
 {% endblock %}
 
