--- a/templates/personal/idcard.html
+++ b/templates/personal/idcard.html
@@ -103,7 +103,7 @@
 				</div>
 			</div>
 
-			{% include 'include/aside.html' %}
+			{% include 'personal/person_base/aside.html' %}
 		</div>
 {% endblock %}
 
