--- a/templates/personal/news.html
+++ b/templates/personal/news.html
@@ -152,7 +152,7 @@
 				</div>
 			</div>
 
-			{% include 'include/aside.html' %}
+			{% include 'personal/person_base/aside.html' %}
 		</div>
 
 {% endblock %}
