--- a/templates/personal/password.html
+++ b/templates/personal/password.html
@@ -94,6 +94,6 @@
 				</div>
 			</div>
 
-        {% include 'include/aside.html' %}
+        {% include 'personal/person_base/aside.html' %}
 		</div>
 {% endblock %}
