--- a/templates/personal/person_base/aside.html
+++ b/templates/personal/person_base/aside.html
@@ -7,7 +7,7 @@
             <p><i class="am-icon-newspaper-o"></i>个人资料</p>
             <ul>
                 <li><a href="{% url 'information' %}">个人信息</a></li>
-                <li><a href="safety.html">安全设置</a></li>
+                <li><a href="{% url 'safety' %}">安全设置</a></li>
                 <li><a href="{% url 'address' %}">地址管理</a></li>
                 <li><a href="cardlist.html">快捷支付</a></li>
             </ul>
