--- a/templates/personal/question.html
+++ b/templates/personal/question.html
@@ -108,7 +108,7 @@
 				</div>
 			</div>
 
-        {% include 'include/aside.html' %}
+        {% include 'personal/person_base/aside.html' %}
 		</div>
 
 {% endblock %}
