--- a/templates/personal/refund.html
+++ b/templates/personal/refund.html
@@ -174,7 +174,7 @@
 				</div>
 			</div>
 
-        {% include 'include/aside.html' %}
+        {% include 'personal/person_base/aside.html' %}
 		</div>
 
 {% endblock %}
