--- a/templates/personal/suggest.html
+++ b/templates/personal/suggest.html
@@ -76,7 +76,7 @@
 				</div>
 			</div>
 
-        {% include 'include/aside.html' %}
+        {% include 'personal/person_base/aside.html' %}
 		</div>
 {% endblock %}
 
