--- a/templates/personal/wallet.html
+++ b/templates/personal/wallet.html
@@ -61,7 +61,7 @@
 				</div>
 			</div>
 
-        {% include 'include/aside.html' %}
+        {% include 'personal/person_base/aside.html' %}
 		</div>
 {% endblock %}
 
